<resources>
    <string name="app_name">AutoPay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_status">Not Logged in</string>

    <string name="MyPage">마이 페이지</string>
    <string name="MyCard">등록된 카드</string>
    <string name="EnrollCard">카드 등록</string>
    <string name="MonthlyReport">이번 달 절약 확인</string>
    <string name="Analysis">소비 분석</string>
    <string name="Setting">설정</string>
    <string name="Map">지도</string>
    <string name="CurrentPosition">\u00B7현재 위치</string>
    <string name="CardRecommend">\u00B7추천 카드</string>
</resources>
