<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MyPage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/MyPage" />
        <item
            android:id="@+id/MyCard"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/MyCard" />
        <item
            android:id="@+id/Map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Map" />
        <item
            android:id="@+id/EnrollCard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/EnrollCard" />
        <item
            android:id="@+id/MonthlyReport"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/MonthlyReport" />
        <item
            android:id="@+id/Analysis"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Analysis" />
    </group>

    <item android:title="Application">
        <menu>
            <item
                android:id="@+id/Setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Setting" />

        </menu>
    </item>

</menu>
